--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,9 +1,32 @@
-<div class="container">
-    <div class="content">
-        <h1>What is Research Support Hub?</h1>
-        <p>A centralized hub for research-related resources, guidelines, and information.</p>
-        <p>De La Salle University, as a research-based university, places high priority in producing relevant and accurate research outputs. This platform addresses the critical gap in data collection, enhancing the efficiency and reach of research efforts across the university.</p>
-        <button>Participate Now</button>
-    </div>
-    <div class="image-placeholder"></div>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Home</title>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="/css/main.css">
+    </head>
+    <main class="wrapper">
+        <div class="container">
+            <div class="content">
+                <h1>What is Research Support Hub?</h1>
+                <p>A centralized hub for research-related resources, guidelines, and information.</p>
+                <p>De La Salle University, as a research-based university, places high priority in producing relevant and accurate research outputs. This platform addresses the critical gap in data collection, enhancing the efficiency and reach of research efforts across the university.</p>
+                <button>Participate Now</button>
+            </div>
+            <div class="image-placeholder"></div>
+        </div>
+        <div class="container">
+            <div class="image-placeholder"></div>
+        </div>
+        <div class="container">
+            <div class="content">
+                <h1>Important Announcements</h1>
+                <p>Placeholder</p>
+            </div>
+            <div class="image-placeholder"></div>
+        </div>
+    </main>
+</html>
