--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,11 +1,24 @@
-<div class="container">
-    <div class="content">
-        <h1>Login</h1>
-        <label for="email">Email:</label>
-        <input type="email" id="email" placeholder="Email" required>
-        <label for="password">Password:</label>
-        <input type="password" id="password" placeholder="Password" required>
-        <button id="loginButton">Login</button>
-        <p>Don't have an account? <a href="/register">Register here</a></p>
-    </div>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Home</title>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="/css/main.css">
+    </head>
+    <main class="wrapper">
+        <div class="container">
+            <div class="content">
+                <h1>Login</h1>
+                <label for="email">Email:</label>
+                <input type="email" id="email" placeholder="Email" required>
+                <label for="password">Password:</label>
+                <input type="password" id="password" placeholder="Password" required>
+                <button id="loginButton">Login</button>
+                <p>Don't have an account? <a href="/register">Register here</a></p>
+            </div>
+        </div>
+    </main>
+</html>
