--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,18 +1,30 @@
-{{!-- register.hbs --}}
-<div class="container">
-    <div class="content">
-        <h1>Register</h1>
-        <div>
-            <label for="id">ID Number:</label>
-            <input type="text" id="id" name="ID" placeholder="ID Number" required>
-            <label for="fullName">Full Name:</label>
-            <input type="text" id="fullName" name="Full Name" placeholder="Full Name" required>
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" placeholder="Email" required>
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" placeholder="Password" required>
-            <button id="registerButton">Register</button>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Home</title>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="/css/main.css">
+    </head>
+    <main class="wrapper">
+        <div class="container">
+            <div class="content">
+                <h1>Register</h1>
+                <div>
+                    <label for="id">ID Number:</label>
+                    <input type="text" id="id" name="ID" placeholder="ID Number" required>
+                    <label for="fullName">Full Name:</label>
+                    <input type="text" id="fullName" name="Full Name" placeholder="Full Name" required>
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" placeholder="Email" required>
+                    <label for="password">Password:</label>
+                    <input type="password" id="password" name="password" placeholder="Password" required>
+                    <button id="registerButton">Register</button>
+                </div>
+                <p>Already have an account? <a href="/login">Login here</a></p>
+            </div>
         </div>
-        <p>Already have an account? <a href="/login">Login here</a></p>
-    </div>
-</div>
+    </main>
+</html>
