--- a/views/res-req.hbs
+++ b/views/res-req.hbs
@@ -5,50 +5,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Request for Participants</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/register.css">
+    <link rel="stylesheet" href="/css/header2.css">
 </head>
-<body>
-<h1></h1>
-<div class="container">
-    <div class="content">
-        <h1>Request for Participants</h1>
-        <form id="resReqForm">
-            <div>
-                <label for="title">Title:</label>
-                <input type="text" id="title" name="title" placeholder="Enter Research Title" required>
+<header2 class="header2">
+    <h1>Research Request</h1>
+</header2>
+<main class="wrapper"> 
+    <body>
+        <div class="container">
+            <div class="content">
+                <h1>Request for Participants</h1>
+                <form id="resReqForm">
+                    <div>
+                        <label for="title">Title:</label>
+                        <input type="text" id="title" name="title" placeholder="Enter Research Title" required>
 
-                <label for="desc">Description:</label>
-                <input type="text" id="desc" name="desc" placeholder="Write a description" required>
+                        <label for="desc">Description:</label>
+                        <input type="text" id="desc" name="desc" placeholder="Write a description" required>
 
-                <label for="contact">Contact Details (Email):</label>
-                <input type="email" id="contact" name="contact" placeholder="someone@gmail.com" required>
+                        <label for="contact">Contact Details (Email):</label>
+                        <input type="email" id="contact" name="contact" placeholder="someone@gmail.com" required>
 
-                <label for="dg_method">Data Gathering Method:</label>
-                <select id="dg_method" name="dg_method" required>
-                    <option value="Qualitative">Qualitative</option>
-                    <option value="Quantitative">Quantitative</option>
-                </select>
+                        <label for="dg_method">Data Gathering Method:</label>
+                        <select id="dg_method" name="dg_method" required>
+                            <option value="Qualitative">Qualitative</option>
+                            <option value="Quantitative">Quantitative</option>
+                        </select>
 
-                <label for="typeOfParticipation">Type of Participation:</label>
-                <input type="text" id="typeOfParticipation" name="typeOfParticipation" placeholder="Survey, Interview, etc." required>
+                        <label for="typeOfParticipation">Type of Participation:</label>
+                        <input type="text" id="typeOfParticipation" name="typeOfParticipation" placeholder="Survey, Interview, etc." required>
 
-                <label for="dg_link">Forms Link:</label>
-                <input type="url" id="dg_link" name="dg_link" placeholder="(For Surveys) Enter Link">
+                        <label for="dg_link">Forms Link:</label>
+                        <input type="url" id="dg_link" name="dg_link" placeholder="(For Surveys) Enter Link">
 
-                <label for="start_date">Start Date:</label>
-                <input type="date" id="start_date" name="start_date" required>
+                        <label for="start_date">Start Date:</label>
+                        <input type="date" id="start_date" name="start_date" required>
 
-                <label for="end_date">End Date:</label>
-                <input type="date" id="end_date" name="end_date" required>
+                        <label for="end_date">End Date:</label>
+                        <input type="date" id="end_date" name="end_date" required>
 
-                <button type="submit" id="submitReqButton">Submit</button>
-            </div>
-        </form>
-    </div>
-</div>
-</body>
-
-<script type="module" src="/js/res-req.js"></script>
-
+                        <button type="submit" id="submitReqButton">Submit</button>
+                    </div>
+                </form>
+            </div> 
+        </div>
+        <script type="module" src="/js/res-req.js"></script>
+    </body>
+</main>
 </html>
