--- a/views/res-resources.hbs
+++ b/views/res-resources.hbs
@@ -8,16 +8,21 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/res-resources.css">
+    <link rel="stylesheet" href="/css/header2.css">
 </head>
-<body>
-    <main>
-        <section class="research-summary">
-            <h2>{{totalProjects}} Active Projects</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        </section>
-        <section class="research-search">
+    <header2 class="header2">
+        <h1>Research Resources</h1>
+    </header2>
+    <main class="wrapper">
+        <div class="container">
+            <div class="content">
+                <h2>{{totalProjects}} Active Projects</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            </div>
+        </div>
+        <div class="container">
             <div class="search-container">
                 <div class="search-dropdown">
                     <button class="dropbtn">Search By:</button>
@@ -29,19 +34,19 @@
                 <input type="text" class="search-input" placeholder="Enter keywords you are looking for">
                 <button class="search-button"><i class="fa fa-search"></i></button>
             </div>
-        </section>
-        <section class="research-list">
-            {{#each researchRequests}}
-            <div class="research-card">
-                <span class="type-part">{{typePart}}</span>
-                <h3>{{title}}</h3>
-                <p>{{desc}}</p>
-                <a href="/research-details/{{@key}}?userId={{currentUser.uid}}" class="button">Participate</a>
+        </div>
+        <div class="container">
+            <div class="content">
+                {{#each researchRequests}}
+                <div class="research-card">
+                    <span class="type-part">{{typePart}}</span>
+                    <h3>{{title}}</h3>
+                    <p>{{desc}}</p>
+                    <a href="/research-details/{{@key}}?userId={{currentUser.uid}}" class="button">Participate</a>
+                </div>
+                {{/each}}
             </div>
-            {{/each}}
-        </section>
+        </div>
     </main>
-    <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script type="module" src="/js/res-resources.js"></script>
-</body>
 </html>
