--- a/public/css/res-resources.css
+++ b/public/css/res-resources.css
@@ -1,4 +1,3 @@
-
 .content {
     max-width: 100%;
 }
@@ -79,9 +78,10 @@
 }
 
 .search-button {
-    background-color: #4CAF50;
+    background-color: #43B570;
     border: none;
-    padding: 0.5rem 1rem;
+    color: white;
+    padding: 0.8rem 1.2rem;
     cursor: pointer;
     border-radius: 4px;
 }
@@ -111,13 +111,14 @@
 }
 
 .research-card h3 {
-    margin-top: 1rem;
-    margin-bottom: 0rem; /* Increased margin to make space for type-part */
+    margin-top: 0.9rem;
+    margin-bottom: 1rem;
 }
 
 .research-card p {
     margin-bottom: 1rem;
 }
+
 .research-card .button-container {
     margin-top: auto;
     padding-top: 1rem;
@@ -125,7 +126,7 @@
 
 .research-card .button {
     display: inline-block;
-    background-color: #4CAF50;
+    background-color: #43B570;
     color: #FFFFFF;
     padding: 0.5rem 1rem;
     text-decoration: none;
@@ -163,7 +164,6 @@
     cursor: pointer;
     outline: none;
 }
-
 
 .dropbtn:after {
     content: ' ▼';
@@ -204,18 +204,4 @@
     border: 1px solid #ddd;
     outline: none;
     flex: 1;
-}
-
-.search-button {
-    background-color: #43b671;
-    color: white;
-    padding: 10px;
-    border: none;
-    cursor: pointer;
-    outline: none;
-}
-
-.search-button img {
-    width: 20px;
-    height: 20px;
 }
