--- a/public/css/main.css
+++ b/public/css/main.css
@@ -111,6 +111,15 @@ nav a {
   cursor: pointer;
 }
 
+/* footer  */
+footer {
+  display: flex;
+  align-items: center;
+  background-color: #333;
+  padding: 10px 20px;
+  width: 100%;
+}
+
 
 /* public/css/styles.css */
 body {
@@ -162,7 +171,6 @@ body {
 }
 
 /* page layout  */
-
 #page-layout {
   border: 1px solid rgba(0, 0, 0, 0.2);
   border-radius: 0.375rem;
@@ -181,13 +189,6 @@ body {
   text-transform: uppercase;
 }
 
-footer {
-  display: flex;
-  align-items: center;
-  background-color: #333;
-  padding: 10px 20px;
-  width: 100%;
-}
 
 /* Mobile */
 @media (max-width: 768px) {
