--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -1,53 +1,47 @@
-/* General styles for the admin page */
-body {
-    background-color: #343a40; /* Dark background color */
-    color: #fff; /* Light text color */
-    font-family: Arial, sans-serif;
-}
-
-/* Admin menu styles */
 .admin-menu {
     display: flex;
-    flex-direction: column;
-    gap: 10px;
-    padding: 20px;
-    background-color: #3a3f47; /* Slightly lighter background for the menu */
-    width: 250px;
-    height: 100px;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    padding: 10px;
+    border-radius: 5px;
+    background-color: #555555;
+    width: 100%;
 }
 
-.admin-menu .button {
-    background-color: #28a745; /* Green button background */
-    color: #fff; /* White text */
+.admin-menu button {
+    padding: 10px;
     border: none;
-    border-radius: 10px; /* Rounded corners */
+    border-radius: 4px;
+    background-color: #43b570;
+    color: white;
     cursor: pointer;
     font-size: 16px;
     transition: background-color 0.3s ease;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .admin-menu button:hover {
-    background-color: #218838; /* Darker green on hover */
+    background-color: #43b570;
 }
 
 .admin-menu button.active {
-    background-color: #218838; /* Active button background */
+    background-color: #52c07e;
 }
 
-/* Content area styles */
 .admin-content {
     padding: 20px;
-    /* margin-left: 270px; Make space for the menu */
-    background-color: #3a3f47; /* Match the menu background color */
-    border-radius: 10px; /* Rounded corners */
+    border-radius: 10px;
 }
 
-/* Card styles */
 .user-card, .request-card {
-    background-color: #454d55; /* Dark card background */
+    background-color: #555555;
+    color: white;
     padding: 20px;
     margin-bottom: 10px;
-    border-radius: 10px; /* Rounded corners */
+    border-radius: 10px;
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -62,28 +56,26 @@ body {
     margin: 5px 0;
 }
 
-/* Button styles inside cards */
 .user-card button, .request-card button {
-    background-color: #28a745; /* Green button background */
-    color: #fff; /* White text */
+    background-color: #43b570; 
+    color: #fff; 
     border: none;
     padding: 10px;
-    border-radius: 5px; /* Slightly rounded corners */
+    border-radius: 5px;
     cursor: pointer;
     font-size: 14px;
     transition: background-color 0.3s ease;
 }
 
 .user-card button:hover, .request-card button:hover {
-    background-color: #218838; /* Darker green on hover */
+    background-color: #03713e; 
 }
 
-/* Research request status styles */
 .request-card .status {
     display: inline-block;
     padding: 5px 10px;
-    border-radius: 5px; /* Slightly rounded corners */
-    color: #fff; /* White text */
+    border-radius: 5px;
+    color: #fff; 
 }
 
 .status.pending {
